<resources>
    <string name="app_name">D.O.T</string>

    <!-- Login page -->
    <string name="login_title">Login</string>
    <string name="email_text">Email*</string>
    <string name="password_text">Mot de passe*</string>
    <string name="login_btn">Se connecter</string>
    <string name="or_label">Ou</string>
    <string name="create_btn">Créer un compte</string>
    <string name="remember_me">Se souvenir de moi</string>
    <string name="reconnexion_needed">Vous devez vous reconnecter</string>
    <string name="automatic_connexion">Souhaitez vous vous connecter automatiquement lors des prochaines ouvertures de l\'application ?</string>
    <string name="remember_connexion">Ne pas me connecter automatiquement mais se souvenir de moi</string>




    <!-- Alert Dialog Login page -->
    <string name="alert_text">L\'Administrateur n\'a pas validé votre inscription, vous ne pouvez donc pas vous connecter.</string>
    <string name="login_choice">Connexion automatique</string>
    <string name="dont_show_again">Ne plus afficher</string>

    <!-- Alert Dialog Logout-->
    <string name="logout_choice">Logout</string>
    <string name="remember_me_logout">Me reconnecter automatiquement à la prochaine ouverture de l\'application :</string>
    <string name="change_user_logout">Se connecter avec un autre utilisateur :</string>

    <!-- signup page -->
    <string name="password_in">Saisir le mot de passe*</string>
    <string name="password_confirm">Confirmer le mot de passe*</string>
    <string name="firstname">Prénom*</string>
    <string name="lastname">Nom*</string>
    <string name="signup_btn">S\'enregistrer</string>


    <!-- Erreurs -->
    <string name="error_invalid_password">Mot de passe incorrect (6 caractères minimum)</string>
    <string name="error_invalid_confirm_password">Les mots de passes ne correspondent pas</string>
    <string name="error_invalid_old_password">Mot de passe faux</string>
    <string name="error_missing_password">Le mot de passe doit être saisie</string>
    <string name="error_invalid_email">Email non valide</string>
    <string name="error_connexion">Erreur lors de la connexion</string>
    <string name="error_connexion_authorized">Erreur lors de la connexion, demander à l\'admin si votre compte a été approuvé</string>


    <string name="error_network">Internet n\'est pas disponible. Veuillez vérifier votre connexion internet et réessayer</string>
    <string name="error_firstname_required">Le prénom est obligatoire</string>
    <string name="error_lastname_required">Le nom est obligatoire</string>
    <string name="error_get_commands">Erreur lors de la récupération des commandes vocales</string>
    <string name="error_get_reminders">Erreur lors de la récupération des notifications</string>
    <string name="error_create_reminders">Erreur lors de la création de la notification</string>
    <string name="error_get_settings">Erreur lors de la récupération des commandes</string>
    <string name="error_sign_up">Erreur lors de la création de l\'utilisateur</string>
    <string name="error_update_user">Erreur lors de la modification de l\'utilisateur</string>
    <string name="error_get_user">Erreur lors de la récupération de l\'utilisateur</string>
    <string name="error_duration">Durée obligatoire</string>
    <string name="error_date">Date obligatoire</string>
    <string name="error_time">Heure obligatoire</string>
    <string name="error_priotity">Priorité obligatoire</string>
    <string name="error_get_user_info">Erreur lors de la récupération de vos données. Veuilez vous reconnecter</string>

    <!-- Success messages -->
    <string name="success_created_notif">Notification enregistrée</string>
    <string name="success_send">Envoyé</string>
    <string name="user_created">Utilisateur créé</string>

    <!-- Informations-->
    <string name="loading">Chargement...</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="ok">Ok</string>
    <string name="save">Enregistrer</string>
    <string name="info">Information</string>
    <string name="cancel">Annuler</string>
    <string name="double_click_for_exit">Veuillez cliquer une seconde fois pour quitter</string>
    <string name="double_click_for_exit_or_long">Veuillez cliquer une seconde fois pour quitter ou rester appuyé pour voir les options</string>



    <!-- Titre page -->
    <string name="image_home">Dot project</string>
    <string name="title_activity_command">Télécomande</string>
    <string name="title_activity_list_command">Commandes vocales</string>
    <string name="title_activity_events">Evénements</string>
    <string name="title_activity_create_event">Création évènement</string>
    <string name="title_activity_update_user">Mon profil</string>
    <string name="title_activity_speak_to_sarah">Speak to SARAH</string>
    <string name="title_activity_sign_up">Inscription</string>
    <string name="title_activity_main">D.O.T</string>
    <string name="title_activity_login">Connexion</string>
    <string name="notification_detail_activity">Détail notification</string>
    <string name="user_detail_activity">Détail utilisateur</string>


    <!-- Télécommande -->
    <string name="telecommande_title">Télécommande</string>
    <string name="sommeil_mode">Mode sommeil</string>
    <string name="sommeil_out">Mode éveillé</string>
    <string name="activer_notifs">Notifications activées</string>
    <string name="desactiver_notifs">Notifications désactivées</string>
    <string name="activer_weather">Météo activée</string>
    <string name="desactiver_weather">Météo désactivée</string>
    <string name="test_sarah">Test SARAH</string>
    <string name="busy_on">Occupé</string>
    <string name="busy_off">Disponible</string>
    <string name="twitter_on">Tweets activés</string>
    <string name="twitter_off">Tweets désactivés</string>
    <string name="mode_client">Mode client</string>
    <string name="mode_normal">Mode normal</string>
    <string name="add_notif">Créer une notifications</string>
    <string name="test_label">Saisir la phrase à dire :</string>


    <!-- Liste Commandes -->
    <string name="list_commandes_title">Liste des commandes vocales</string>
    <string name="title_activity_pager">PagerActivity</string>

    <!-- Details commande -->
    <string name="description_label">Description :</string>

    <!-- Detail notification -->
    <string name="notification_detail_title">Détail de la notification</string>
    <string name="title_label">Titre :</string>
    <string name="type_label">Type :</string>
    <string name="date_label">Date création :</string>
    <string name="date_notif_label">Date notification :</string>
    <string name="duration_label">Durée :</string>
    <string name="displayed_label">Déjà affichée :</string>
    <string name="priority">Priorité :</string>
    <string name="displayed_ago_label">il y a :</string>
    <string name="owner_label">Par :</string>


    <!--event page-->
    <string name="notification_title">Derniers évènements</string>

    <!--createEvent page-->
    <string name="create_event_title">Création notification</string>
    <string name="date_picker_label">Date* :</string>
    <string name="title_label_obl">Titre* :</string>
    <string name="time_picker_label">Heure* :</string>
    <string name="spinner_type_prompt">Type</string>
    <string name="duration_label_oblig">Durée* :</string>
    <string name="description_label_obl">Description* :</string>
    <string name="priority_label">Priorité* :</string>
    <string name="priority_one">1</string>
    <string name="priority_two">2</string>
    <string name="priority_three">3</string>
    <string name="calendar_date_picker_result_values">%3$s/%2$s/%1$s</string>
    <string name="radial_time_picker_result_value">%1$s:%2$s</string>
    <string-array name="types_arrays">
        <item>Mémo</item>
        <item>Alerte</item>
    </string-array>
    <string name="minutes_unit"> minutes</string>

    <string name="title_error">Le titre est obligatoire</string>
    <string name="description_error">La description est obligatoire</string>

    <!--profil page-->
    <string name="profil_title">Mon Profil</string>
    <string name="old_psw_label">Ancien mot de passe</string>
    <string name="psw_label">Nouveau mot de passe</string>
    <string name="psw_new_label">Ressaisir nouveau mot de passe</string>

    <!--Admin page-->
    <string name="admin_title">Gestion Admin</string>
    <string name="admin_checkbox">Administrateur</string>
    <string name="approved_checkbox">Approuvé</string>


</resources>
