<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sncf.itnovem.dotandroidapplication.UserDetailActivity">
    <include layout="@layout/app_bar_detail" android:id="@+id/app_bar_detail"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/firstname"
        android:id="@+id/firstnameLabel"
        android:layout_below="@+id/app_bar_detail"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/firstname"
        android:layout_alignTop="@+id/firstnameLabel"
        android:layout_alignParentEnd="true"
        android:lines="1"
        android:layout_toEndOf="@+id/firstnameLabel"
        android:layout_marginStart="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lastname"
        android:id="@+id/lastnamelabel"
        android:layout_below="@+id/firstname"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lastnameText"
        android:layout_below="@+id/firstname"
        android:lines="1"
        android:layout_alignEnd="@+id/firstname"
        android:layout_marginStart="10dp"
        android:layout_alignTop="@+id/lastnamelabel"
        android:layout_toEndOf="@+id/lastnamelabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/email_text"
        android:id="@+id/emailText"
        android:layout_below="@+id/lastnameText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/emailValue"
        android:layout_below="@+id/emailText"
        android:lines="1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/psw_label"
        android:id="@+id/passwordText"
        android:layout_below="@+id/emailValue"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/passwordValue"
        android:layout_below="@+id/passwordText"
        android:lines="1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/app_bar_profil"
        android:id="@+id/linearLayout3">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/avatar"
            android:contentDescription="avatar"
            android:scaleType="centerCrop"
            />
    </LinearLayout>
    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:id="@+id/saveBtn"
            android:layout_margin="16dp"
            android:src="@drawable/ic_save_white_36dp"
            app:layout_anchorGravity="bottom|right|end" />

    </android.support.design.widget.CoordinatorLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/approved_checkbox"
        android:id="@+id/isApproved"
        android:layout_below="@+id/passwordValue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_checkbox"
        android:id="@+id/isAdmin"
        android:layout_below="@+id/isApproved"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

</RelativeLayout>
