<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sncf.itnovem.dotandroidapplication.CreateEventActivity"
    android:scrollbars="vertical">
    <include layout="@layout/app_bar_detail" android:id="@+id/app_bar_detail"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_label_obl"
        android:id="@+id/titreLabel"
        android:layout_below="@+id/app_bar_detail"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:maxLength="40"
        android:layout_below="@+id/titreLabel"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/type_label"
        android:id="@+id/typeLabel"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:prompt="@string/spinner_type_prompt"
        android:layout_below="@+id/title"
        android:layout_toEndOf="@+id/typeLabel"
        android:layout_marginTop="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/duration_label_oblig"
        android:id="@+id/duration_label"
        android:layout_below="@+id/spinner"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/seekBarValue"
        android:layout_below="@+id/spinner"
        android:layout_toEndOf="@+id/duration_label"
        android:layout_above="@+id/seekBarDuration"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"/>
    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarDuration"
        android:layout_below="@+id/duration_label"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:max="60"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/radioLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBarDuration"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/priority_label"
            android:id="@+id/textView14"
            android:layout_weight="1"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:id="@+id/radioGroupPriority"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority_one"
                android:id="@+id/radioButtonOne"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority_two"
                android:id="@+id/radioButtonTwo"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority_three"
                android:id="@+id/radioButtonThree"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" />
        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/radioLayout"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/date_picker_label"
            android:id="@+id/date_picker_label"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/datePickerBtn"
            android:src="@drawable/ic_date_range_white_36dp"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:layout_gravity="center"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timePickerBtn"
            android:src="@drawable/ic_access_time_white_36dp"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="jj/MM/aaaa"
            android:id="@+id/date_notif"
            android:layout_weight="1"
            android:layout_gravity="center_vertical|end"
            android:layout_marginLeft="15dp" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="HH:mm"
            android:id="@+id/time"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/description_label_obl"
        android:id="@+id/description_label_obl"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/description_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:maxLength="75"
        android:layout_above="@+id/btnSubmit"
        android:gravity="top"
        android:layout_below="@+id/description_label_obl" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:id="@+id/btnSubmit"
        android:layout_above="@+id/bottomToolbar"
        android:layout_centerHorizontal="true" />
    <Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:background="@color/primary_dark"
        android:elevation="4dp"
        android:layout_gravity="bottom"
        android:id="@+id/bottomToolbar"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:src="@drawable/ic_videogame_asset_white_24dp"
                android:background="@android:color/transparent"
                android:contentDescription="telecommande"
                android:elevation="2dp"
                android:id="@+id/telecommandeBtn"/>
            <ImageButton
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:src="@drawable/ic_view_list_white_24dp"
                android:background="@android:color/transparent"
                android:contentDescription="liste des commandes"
                android:elevation="2dp"
                android:id="@+id/listBtn"/>
            <ImageButton
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:src="@drawable/ic_notifications_white_24dp"
                android:background="@android:color/transparent"
                android:contentDescription="mémo"
                android:elevation="2dp"
                android:id="@+id/notificationsBtn"/>
        </LinearLayout>

    </Toolbar>



</RelativeLayout>
